<resources>
    <string name="app_name">TaskManager</string>
    <string name="confirm">Confirm</string>
    <string name="modify">Modify</string>
    <string name="add">Add</string>
    <string name="new_task">New task</string>
    <string name="statistics">Statistics</string>
    <string name="cancel">Cancel</string>
    <string name="task_name">Task name</string>
    <string name="task_time">Date and time</string>
    <string name="task_description">Description</string>
    <string name="task_reminder_checkbox">Remind me 15 minutes before task elapses</string>
    <string name="day_hint">Day</string>
    <string name="month_hint">Month</string>
    <string name="year_hint">Year</string>
    <string name="hours_hint">Hours</string>
    <string name="minutes_hint">Minutes</string>
    <string name="task_priority">Priority</string>
    <string name="bad_task_name_input">Task name not specified!</string>
    <string name="bad_task_time_input">Task date and/or time not valid!</string>
    <string name="bad_task_desc_input">Task description not specified!</string>
    <string name="key_add_task">Add New Task</string>
    <string name="key_modify_task">Modify Task</string>
    <string name="task_finished_check_box">Task finished</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="delete_task">Delete</string>
    <string name="save_task">Save</string>
    <string name="high_priority">High priority tasks</string>
    <string name="medium_priority">Medium priority tasks</string>
    <string name="low_priority">Low priority tasks</string>
    <string name="btn_return">Return</string>

</resources>
