<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="rtrk.pnrs1.ra11_2014.Main2Activity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/layout1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_name"
                    android:textAlignment="center"
                    android:background="@color/colorAccent"
                    android:textSize="20dp"
                    android:textColor="@color/colorWhite" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textAlignment="center"
                    android:id="@+id/taskName"
                    android:background="@drawable/custom_border2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnConfirm1"
                    android:text="@string/confirm"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout1"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:id="@+id/layout2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_time"
                    android:textAlignment="center"
                    android:background="@color/colorAccent"
                    android:textSize="20dp"
                    android:textColor="@color/colorWhite"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/layout21">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/day_hint"
                        android:layout_weight="1"
                        android:id="@+id/day"
                        android:inputType="number"
                        android:background="@drawable/custom_border2"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/month_hint"
                        android:layout_weight="1"
                        android:id="@+id/month"
                        android:inputType="number"
                        android:background="@drawable/custom_border2"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/year_hint"
                        android:layout_weight="1"
                        android:id="@+id/year"
                        android:inputType="number"
                        android:background="@drawable/custom_border2"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/layout22">
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hours_hint"
                        android:layout_weight="1"
                        android:id="@+id/hour"
                        android:inputType="number"
                        android:background="@drawable/custom_border2"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/minutes_hint"
                        android:layout_weight="1"
                        android:id="@+id/minute"
                        android:inputType="number"
                        android:background="@drawable/custom_border2"/>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnConfirm2"
                    android:text="@string/confirm"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout2"
                android:layout_marginTop="50dp"
                android:id="@+id/layout3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_description"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:background="@color/colorAccent"
                    android:textSize="20dp"
                    android:textColor="@color/colorWhite"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scrollbars="vertical"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbarThumbVertical="@color/colorAccent"
                    android:scrollbarStyle="outsideInset"
                    android:layout_weight="1"
                    android:id="@+id/description"
                    android:gravity="start"
                    android:textAlignment="textStart"
                    android:background="@drawable/custom_border2"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/btnConfirm3"
                    android:text="@string/confirm"
                    android:textAllCaps="false" />
            </LinearLayout>

            <CheckBox
                android:text="@string/task_reminder_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:id="@+id/checkBoxReminder"
                android:layout_below="@+id/layout3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBoxReminder"
                android:layout_marginTop="20dp"
                android:text="@string/task_priority"
                android:layout_weight="1"
                android:textAlignment="center"
                android:id="@+id/priorityText"
                android:background="@color/colorPrimary"
                android:textSize="20dp"
                android:textColor="@color/colorWhite" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/priorityText"
                android:id="@+id/layout4">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnRed"
                    android:layout_weight="1"
                    android:background="@color/colorRed"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/btnYellow"
                    android:layout_weight="1"
                    android:background="@color/colorYellow"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/btnGreen"
                    android:background="@color/colorGreen"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/layout4"
                android:layout_marginTop="10dp"
                android:id="@+id/layout5">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/btnAdd"
                    android:text="@string/add"
                    android:enabled="false"
                    android:textAllCaps="false"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/btnCancel"
                    android:text="@string/cancel"
                    android:textAllCaps="false"/>
            </LinearLayout>

        </RelativeLayout>
</ScrollView>

